--- a/weboldal/src/App.css
+++ b/weboldal/src/App.css
@@ -1,7 +1,7 @@
+@import url("https://cdn.syncfusion.com/ej2/material.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @layer base {
   :root {
     --background: 0 0% 100%;
